clean up some smells regarding PARSE/Indirect